# hq-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  JWT_AUTH_TESTING.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  specs.md
app/: dependencies.py  main.py  manage.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  legal.py  messages.py  posts.py  projects.py  roles.py  uploads.py  users.py
app/commands/: MANAGE_CLI.md  __init__.py  create_admin.py  makemigrations.py  migrate.py  registry.py  seed_legal_pages.py  seed_messages.py
app/config/: logging.py  settings.py  tz.py
app/core/: file_requirements.py  util.py
app/db/: __init__.py  session.py
app/error/: handlers.py
app/jobs/: cleanup_expired_sessions.py  cleanup_expired_tokens.py  scheduler.py
app/models/: legal_page.py  message.py  password_reset_token.py  post.py  project.py  role.py  session.py  token.py  token_type.py  user.py
app/models/migrations/: README  env.py
app/models/migrations/versions/: 0001_initial.py  0002_initial_migration.py  0003_add_archived_at_to_messages.py  0004_description.py  0005_add_thumbnail_url_to_projects.py  0005_add_type_to_tokens.py  0006_add_thumbnail_url_to_projects.py  0007_add_slug_to_posts.py  0008_add_lang_and_composite_unique_to_posts.py  0009_add_legal_pages.py  0010_rename_cancelled_enum_value.py  0011_lowercase_projectstatus_enum_values.py  0012_lowercase_poststatus_enum_values.py
app/repositories/: legal_page_repository.py  message_repository.py  password_reset_token_repository.py  post_repository.py  project_repository.py  repository.py  role_repository.py  session_repository.py  token_repository.py  user_repository.py
app/schemas/: current.py  current_user.py
app/schemas/internal/: client_info.py  post_content.py
app/schemas/request/: create_message.py  create_post.py  create_project.py  create_user.py  forgot_password.py  login_user.py  register_user.py  reply_to_message.py  reset_password.py  sign_upload.py  update_legal_page.py  update_post.py  update_project.py  update_role.py  update_self.py  update_user.py  user.py
app/schemas/response/: auth.py  item_response.py  legal_page_response.py  list_response.py  me.py  message.py  post_response.py  project_response.py  protected_user.py  role.py  role_response.py  session.py  token_response.py  user_response.py  user_with_role.py
app/services/: auth_service.py  file_service.py  legal_page_service.py  message_service.py  password_service.py  post_service.py  project_service.py  user_service.py
app/services/static/: crypto_service.py  email_service.py  file_service.py  jwt_service.py  password_service.py  templating_service.py
app/templates/: reply-to-message.html.j2  reset-password.html.j2  verify-email.html.j2
src/: app.controller.ts  app.module.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  protected-route.guard.ts  session.schema.ts
src/common/decorator/: client-info.decorator.ts  default-int.decorator.ts  pagination.decorator.ts  requires-permission.decorator.ts  user.decorator.ts
src/common/dto/: app-response.dto.ts  error-response.dto.ts  item-response.dto.ts  list-response.dto.ts  pagination-params.dto.ts  response-metadata.dto.ts
src/common/filter/: global-exception.filter.ts
src/common/interface/: refresh-claims.interface.ts
src/common/util/: space.ts
src/export/: export.controller.ts  export.module.ts  export.service.ts
src/export/dto/: export-fields.enum.ts  export-format.enum.ts  export-records.enum.ts  export-request.dto.ts
src/file/: constants.ts  file.controller.ts  file.module.ts  file.service.ts  s3client.provider.ts
src/file/dto/: signed-upload-link-request.dto.ts  signed-upload-link-response.dto.ts  upload-type.enum.ts
src/mail/: mail.service.ts
src/member/: member.controller.ts  member.entity.ts  member.module.ts  member.schema.ts  member.service.ts
src/member/dto/: create-member-request.dto.ts  update-member-request.dto.ts
src/message/: message.controller.ts  message.entity.ts  message.module.ts  message.schema.ts  message.service.ts
src/message/dto/: message-status.enum.ts  reply-to-message-request.dto.ts  send-message-request.dto.ts
src/project/: project.controller.ts  project.module.ts  project.schema.ts  project.service.ts
src/role/: role.controller.ts  role.module.ts  role.service.ts
src/user/: user.controller.ts  user.entity.ts  user.module.ts  user.schema.ts  user.service.ts
src/user/dto/: create-user-request.dto.ts  invite-user-request.dto.ts  public-user.dto.ts  user-response.dto.ts  user-status.enum.ts
src/verification-token/: verification-token.schema.ts  verification-token.service.ts
tests/: conftest.py
tests/integration/: test_auth_jwt.py  test_auth_register.py  test_users_auth.py
tests/unit/: test_auth_service_jwt.py  test_dependencies_jwt.py  test_email_service.py  test_jwt_service.py  test_repository.py  test_schemas_jwt.py  test_settings_jwt.py  test_user_service.py
